CI: fedora: fix "dnf" invocation syntax
In 39e205302e8afb68d954e17944fad5f8c1587287 I erroneously used
"dnf git" instead of "dnf install"

(cherry picked from commit 28e94c619260b4aca1de1213464334bd9b5418c9)
Signed-off-by: Christopher Faulet <cfaulet@haproxy.com>

--- a/.github/workflows/fedora-rawhide.yml
+++ b/.github/workflows/fedora-rawhide.yml
@@ -20,7 +20,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install dependencies
       run: |
-        dnf -y git install pcre-devel zlib-devel pcre2-devel 'perl(FindBin)' perl-IPC-Cmd 'perl(File::Copy)' 'perl(File::Compare)' lua-devel socat findutils systemd-devel clang
+        dnf -y install git pcre-devel zlib-devel pcre2-devel 'perl(FindBin)' perl-IPC-Cmd 'perl(File::Copy)' 'perl(File::Compare)' lua-devel socat findutils systemd-devel clang
     - name: Install VTest
       run: scripts/build-vtest.sh
     - name: Install QuicTLS
