CI: musl: highlight section if there are coredumps
previously, section was collapsed, thus it was harder to find that
there's something to look at

(cherry picked from commit 8382d71808b8998d4c0fcd4465a5dbd078cbf425)
Signed-off-by: Christopher Faulet <cfaulet@haproxy.com>

--- a/.github/workflows/musl.yml
+++ b/.github/workflows/musl.yml
@@ -40,12 +40,17 @@ jobs:
       - name: Show coredumps
         if: ${{ failure() && steps.vtest.outcome == 'failure' }}
         run: |
+          failed=false
           ls /tmp/core/
           for file in /tmp/core/core.*; do
+            failed=true
             printf "::group::"
             gdb -ex 'thread apply all bt full' ./haproxy $file
             echo "::endgroup::"
           done
+          if [ "$failed" = true ]; then
+            exit 1;
+          fi
       - name: Show results
         if: ${{ failure() }}
         run: |
